[tool.poetry]
name = "curso excel"
version = "1.0"
description = "Repositorio curso de excel da Jornada Datafoia"
authors = ["datafoia <datafoia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
